Fixes after merge

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/global_txt_email"
                 android:inputType="textEmailAddress"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
@@ -64,6 +65,7 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/auth_txt_password"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
