--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/ic_wave2" />
 
     <TextView
-        android:id="@+id/email_home_txt"
+        android:id="@+id/nickname_home_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
