Fixes in layouts Cleaned up code

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
                 android:alpha="0.95"
                 android:text="@string/login_txt_sign_in"
@@ -64,6 +63,7 @@
                 android:drawableStart="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/auth_txt_password"
+                android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingStart="10dp"
