--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="15dp"
                 android:alpha="0.95"
                 android:text="@string/register_txt_join_us"
                 android:textColor="@color/white"
@@ -44,8 +45,10 @@
                 android:background="@drawable/rounded_rect"
                 android:drawableStart="@drawable/ic_baseline_account_circle_24"
                 android:drawablePadding="10dp"
+                android:drawableTint="@color/white"
                 android:hint="@string/global_txt_username"
                 android:inputType="textPersonName"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
@@ -62,6 +65,7 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/global_txt_email"
                 android:inputType="textEmailAddress"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
@@ -78,6 +82,7 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/auth_txt_password"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
@@ -94,6 +99,7 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/register_txt_conf_password"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
