--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,48 +14,59 @@
         android:scaleType="fitStart"
         android:src="@drawable/ic_wave2" />
 
-    <TextView
-        android:id="@+id/nickname_home_txt"
+    <TableRow
+        android:id="@+id/profile_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_toStartOf="@+id/person_profile_img"
-        android:textColor="@color/white" />
-
-    <ImageView
-        android:id="@+id/person_profile_img"
-        android:layout_width="70dp"
-        android:layout_height="45dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:contentDescription="@string/layout_desc_person_profile"
-        android:onClick="showAccountDialog"
-        app:srcCompat="@drawable/ic_baseline_account_circle_24" />
+        android:layout_marginEnd="30dp"
+        tools:ignore="RelativeOverlap">
+
+        <TextView
+            android:id="@+id/nickname_home_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/person_profile_img"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/layout_desc_person_profile"
+            android:onClick="showAccountDialog"
+            app:srcCompat="@drawable/ic_baseline_account_circle_24"
+            app:tint="@color/white" />
+    </TableRow>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/linear_lay_buttons_bottom"
-        android:layout_below="@id/person_profile_img"
+        android:layout_below="@id/profile_row"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="70dp"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:text="@string/main_txt_your_recent_locations"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="17sp" />
 
         <ListView
             android:id="@+id/recent_locations_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="40dp"
             android:scrollbarSize="3dp" />
     </LinearLayout>
