--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,6 +132,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/main_txt_add_location"
+                    android:onClick="showLocationDialog"
                     android:textColor="@color/white" />
 
                 <Space
