--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="10dp"
             android:scrollbarSize="3dp" />
     </LinearLayout>
 
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-40dp"
+        android:layout_marginBottom="-128dp"
         android:contentDescription="@string/layout_desc_bottom_wave"
         android:src="@drawable/ic_wave1" />
 
@@ -92,7 +92,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="60dp">
+            android:layout_marginBottom="15dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -104,7 +104,7 @@
                 <ImageView
                     android:id="@+id/location_img"
                     android:layout_width="0dp"
-                    android:layout_height="90dp"
+                    android:layout_height="80dp"
                     android:contentDescription="@string/layout_desc_location_icon"
                     android:onClick="showLocationDialog"
                     app:srcCompat="@drawable/location" />
@@ -132,37 +132,40 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/main_txt_helathy"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/main_txt_healthy"
+                    android:textColor="@color/white"
+                    android:textAlignment="textEnd"
+                    android:textSize="22sp" />
 
-            <Switch
-                android:id="@+id/infection_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:switchMinWidth="55dp"
-                android:switchPadding="22dp"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:thumbTint="@color/chestnut_rose"
-                android:trackTint="@drawable/checker_track"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
+                <Switch
+                    android:id="@+id/infection_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:switchMinWidth="55dp"
+                    android:switchPadding="22dp"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:foregroundGravity="center"
+                    android:thumbTint="@color/chestnut_rose"
+                    android:trackTint="@drawable/checker_track"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/main_txt_infected"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:layout_marginStart="10dp"/>
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/main_txt_infected"
+                    android:textColor="@color/white"
+                    android:textAlignment="textStart"
+                    android:textSize="22sp" />
         </LinearLayout>
     </LinearLayout>
-
 </RelativeLayout>
