--- a/app/src/main/res/drawable/ic_wave2.xml
+++ b/app/src/main/res/drawable/ic_wave2.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="1440dp"
     android:height="620dp"
     android:viewportWidth="1440"
-    android:viewportHeight="320">
+    android:viewportHeight="320"
+    tools:ignore="VectorRaster">
     <path
         android:fillColor="#1f1f1f"
         android:pathData="M0,160L60,144C120,128 240,96 360,96C480,96 600,128 720,160C840,192 960,224 1080,208C1200,192 1320,128 1380,96L1440,64L1440,0L1380,0C1320,0 1200,0 1080,0C960,0 840,0 720,0C600,0 480,0 360,0C240,0 120,0 60,0L0,0Z" />
