--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,33 +134,26 @@
 
                 <TextView
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/main_txt_healthy"
                     android:textColor="@color/white"
                     android:textAlignment="textEnd"
                     android:textSize="22sp" />
 
-                <Switch
+                <androidx.appcompat.widget.SwitchCompat
+                    app:useMaterialThemeColors="false"
                     android:id="@+id/infection_switch"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_margin="10dp"
-                    android:switchMinWidth="55dp"
-                    android:switchPadding="22dp"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:foregroundGravity="center"
-                    android:thumbTint="@color/chestnut_rose"
-                    android:trackTint="@drawable/checker_track"
-                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+                    app:switchMinWidth="45dp"
+                    app:trackTint="@drawable/checker_track"
+                    app:thumbTint="@color/chestnut_rose" />
 
                 <TextView
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginStart="10dp"
                     android:text="@string/main_txt_infected"
                     android:textColor="@color/white"
