--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -118,12 +118,16 @@
 
             <TextView
                 android:id="@+id/sign_in_registration_txt"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="15dp"
                 android:onClick="backLogin"
-                android:text="@string/register_txt_sign_in_redirect" />
+                android:text="@string/register_txt_sign_in_redirect"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"/>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
