--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25sp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:text="@string/main_txt_in_danger"
-        android:visibility="invisible"
-        android:textColor="@color/red_btn_bg_color" />
+        android:textColor="@color/red_btn_bg_color"
+        android:textSize="25sp"
+        android:visibility="invisible" />
 
     <TableRow
         android:id="@+id/profile_row"
